--- a/cloud-docs/docs/getting-started.mdx
+++ b/cloud-docs/docs/getting-started.mdx
@@ -70,3 +70,5 @@ yarn start:build
 The `cd` command changes the directory you're working with. In order to work with your newly created Cloud site, you'll need to navigate the terminal there.
 
 The `npm start` or `yarn start` command builds your website locally and serves it through a development server, ready for you to view at http://localhost:3000/.
+
+See the create-home-cloud [documentation](./create-home-cloud) for more information.
