--- a/cloud-docs/docs/cloud-api/installation.mdx
+++ b/cloud-docs/docs/cloud-api/installation.mdx
@@ -48,7 +48,7 @@ Environment variables that are needed:
   - Generate a token with no scopes [here](https://github.com/settings/tokens/new)
 
 You can create a `.env.local` file in the root directory of your project and set the environment variables there.
-or you can set the environment variables just by running the following command:
+or you can set the environment variables just by running the following command and entering the values:
 
 <Tabs>
 <TabItem value="npm" label="npm">
