--- a/website/docs/cloud-github/installation.mdx
+++ b/website/docs/cloud-github/installation.mdx
@@ -1,8 +1,9 @@
 ---
 sidebar_position: 1
 ---
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
 
 # Installation
 
