--- a/website/docs/getting-started.mdx
+++ b/website/docs/getting-started.mdx
@@ -1,8 +1,9 @@
 ---
 sidebar_position: 1
 ---
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
 
 # Getting Started
 
@@ -19,7 +20,6 @@ Get started by creating the **cloud**.
 Generate the cloud site using the [create home cloud](https://www.npmjs.com/package/create-home-cloud) tool.
 
 You can simply start by running the next command:
-
 
 <Tabs>
 <TabItem value="npm" label="npm">
