website: docs updated
Signed-off-by: iswilljr <iswilljr@gmail.com>

--- a/website/docs/cloud-api.mdx
+++ b/website/docs/cloud-api.mdx
@@ -1,5 +1,6 @@
 ---
-sidebar_position: 1
+sidebar_position: 3
+sidebar_label: Cloud - Api
 ---
 
 import Tabs from "@theme/Tabs";
@@ -7,7 +8,7 @@ import TabItem from "@theme/TabItem";
 
 # Installation
 
-How to installthe cloud api.
+How to install the cloud api.
 
 ## Clone the repository
 
